2006-11-25  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpbrushclipboard.c
	* app/core/gimppatternclipboard.c
	* app/core/gimptooloptions.c
	* app/core/gimpundo.c
	* app/widgets/gimpdevicestatus.c
	* app/widgets/gimpdock.c
	* app/widgets/gimpimageparasiteview.c
	* app/widgets/gimpimagepropview.c: no need to cast the return
	value of g_value_get_object(), it's a gpointer.

2006-11-24  Kevin Cozens  <kcozens@cvs.gnome.org>

	* app/pdb/gimpprocedure.c: Fix for minor typo in error message.

	* plug-ins/Lighting/lighting_main.c (check_drawables): Only validate
	ID's for drawables that will be used. Disable use of env map (and not
	bump map) if env drawable is of wrong type.

	* plug-ins/script-fu/ftx/ftx.c: Eliminated some compiler warnings.

2006-11-25  Simon Budig  <simon@gimp.org>

	* libgimpwidgets/gimpresolutionentry.c
	* libgimpwidgets/gimpwidgets.def: fix typo in a function name.

	* app/widgets/gimpgradienteditor.c
	* app/widgets/gimppaletteeditor.c
	* app/actions/gradient-editor-actions.c
	* app/actions/palette-editor-actions.c: handle all enum values
	and use sane ones.

	* app/widgets/gimpcontrollerinfo.c: fix a warning.

2006-11-24  Simon Budig  <simon@gimp.org>

	* app/core/gimpdrawable.c
	* app/core/gimpprojection.c: fix the warnings about the interface
	initialization.

2006-11-24  Simon Budig  <simon@gimp.org>

	* libgimpmodule/gimpmodule.[ch]: put the module prototypes into a
	proper place.

	* modules/cdisplay_colorblind.c
	* modules/cdisplay_gamma.c
	* modules/cdisplay_highcontrast.c
	* modules/cdisplay_lcms.c
	* modules/cdisplay_proof.c
	* modules/colorsel_cmyk.c
	* modules/colorsel_cmyk_lcms.c
	* modules/colorsel_triangle.c
	* modules/colorsel_water.c
	* modules/controller_linux_input.c
	* modules/controller_midi.c: reverted.

2006-11-24  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/script-fu-compat.init: Fixed cut and
	paste error in the fix for unbreakupstr.

2006-11-24  Simon Budig  <simon@gimp.org>
