@@ -1,3 +1,13 @@
+2006-11-26  Kevin Cozens  <kcozens@cvs.gnome.org>
+
+	* plug-ins/script-fu/tinyscheme/scheme.c (is_integer): Check cell
+	type for T_NUMBER in addition to checking if it is an integer.
+	Fixes TinyScheme bug #1593861 reported on SourceForge. Fixed
+	prototype for dump_mark_stack(). Quieted compiler warnings.
+
+	* plug-ins/script-fu/scripts/script-fu-compat.init: Added delq,
+	prin1, and print.
+
 2006-11-25  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpbrushclipboard.c
